--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
+    "start": "node ./build/server.js",
+    "dev": "tsc-watch --onSuccess \"pnpm start\""
   },
   "keywords": [],
   "author": "",
@@ -15,20 +16,20 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
-    "@types/node": "^20.10.6",
-    "ts-node-dev": "^2.0.0",
+    "@types/node": "^20.11.7",
+    "tsc-watch": "^6.0.4",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@prisma/client": "^5.7.1",
-    "@supabase/supabase-js": "^2.39.2",
+    "@prisma/client": "^5.8.1",
+    "@supabase/supabase-js": "^2.39.3",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "1.4.5-lts.1",
-    "prisma": "^5.7.1",
+    "prisma": "^5.8.1",
     "zod": "^3.22.4"
   }
 }
